fix: 对于大部分冗余代码进行删除，防止重复造轮子，大部分代码采用Langchain4j重构